data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000128_6a33f5c4-ee97-443e-a0f4-0e5fb1db3f81.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 6a33f5c4-ee97-443e-a0f4-0e5fb1db3f81
- repo: sympy/sympy
- instance_id: sympy__sympy-13177
- base_commit: 662cfb818e865f580e18b59efbb3540c34232beb
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
Mod(x**2, x) is not (always) 0
When the base is not an integer, `x**2 % x` is not 0. The base is not tested to be an integer in Mod's eval logic:

```
if (p == q or p == -q or
        p.is_Pow and p.exp.is_Integer and p.base == q or
        p.is_integer and q == 1):
    return S.Zero
```

so

```
>>> Mod(x**2, x)
0
```
but
```
>>> x = S(1.5)
>>> Mod(x**2, x)
0.75
```

FILES INSPECTED
---------------
- sympy/core/mod.py [Read: 1]

SEARCH ANCHORS
--------------
- [1] Grep pattern='class Mod\\('
- [2] Grep pattern='p\\.is_Pow and p\\.exp\\.is_Integer and p\\.base == q'
- [6] Grep pattern='p\\.is_Pow and p\\.exp\\.is_Integer and p\\.base == q' path='testbed'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find . -name "*.py" -type f | head -20
- [diagnostic] ls -la testbed 2>&1 | head -20
- [test] cd testbed && python test_issue.py
- [other/reproduction] cd testbed && python --version
- [test] cd testbed && python test_issue.py
- [test] python test_issue.py
- [test] python ./swebench_9_15/testbed/test_issue.py
- [test] python test_issue.py
- [test] cd /tmp && python3 ./swebench_9_15/testbed/test_issue.py
- [other/reproduction] git -C ./swebench_9_15/testbed reset test_issue.py
- [other/reproduction] cd /tmp && python3 -c "from sympy import Mod, Symbol, S; x = Symbol('x'); print('Mod(x**2, x) =', Mod(x**2, x)); x = S(1.5); print('Mod(1.5**2, 1.5) =', Mod(x**2, x))"

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
- Traceback (most recent call last):

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Diagnostic Output after action #3]
  ./calculate_session_usage.py
- [Grep Result after action #6]
  Found 1 file
  testbed/sympy/core/mod.py
- [Read Result after action #8]
       1→from __future__ import print_function, division
       2→
       3→from sympy.core.numbers import nan
       4→from .function import Function
       5→
       6→
       7→class Mod(Function):
       8→    """Represents a modulo operation on symbolic expressions.
       9→
      10→    Receives two arguments, dividend p and divisor q.
      11→
      12→    The convention used is the same as Python's: the remainder always has the
      13→    same sign as the divisor.
      14→
      15→    Examples
      16→    ========
      17→
      18→    >>> from sympy.abc import x, y
      19→    >>> x**2 % y
      20→    Mod(x**2, y)
      21→    >>> _.subs({x: 5, y: 6})
      22→    1
      23→
      24→    """
      25→
      26→    @classmethod
      27→    def eval(cls, p, q):
      28→        from sympy.core.add import Add
      29→        from sympy.core.mul import Mul
      30→        from sympy.core.singleton import S
      31→        from sympy.core.exprtools import gcd_terms
      32→        from sympy.polys.polytools import gcd
      33→
      34→        def doit(p, q):
      35→            """Try to return p % q if both are numbers or +/-p is known
      36→            to be less than or equal q.
      37→            """
      38→
      39→
  [... truncated ...]
- [Test Output after action #11]
  Exit code 1
    File "test_issue.py", line 12
      print(f"Mod(x**2, x) = {result}")
                                     ^
  SyntaxError: invalid syntax
- [Test Output after action #16]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 5, in <module>
      from sympy import Mod, Symbol, S
    File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
      raise ImportError("SymPy now depends on mpmath as an external library. "
  ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
- [Test Output after action #18]
  Exit code 1
  Traceback (most recent call last):
    File "./swebench_9_15/testbed/test_issue.py", line 5, in <module>
      from sympy import Mod, Symbol, S
    File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
      raise ImportError("SymPy now depends on mpmath as an external library. "
  ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
- [Test Output after action #20]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 5, in <module>
      from sympy import Mod, Symbol, S
    File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
      raise ImportError("SymPy now depends on mpmath as an external library. "
  ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
- [Test Output after action #22]
  ============================================================
  Testing sympy__sympy-13177: Mod(x**2, x) fix
  ============================================================
  Mod(x**2, x) = x*Mod(x, 1)
  PASS: Mod(x**2, x) correctly NOT simplified to 0 for symbolic x

  For x = 1.5:
  Mod(1.5**2, 1.5) = Mod(2.25000000000000, 1.50000000000000) = 0.750000000000000
  Expected: 0.750000000000000
  PASS: Correct result for x=1.5

  For integer x:
  Mod(x**2, x) where x is integer = 0
  PASS: Mod(x**2, x) correctly simplified to 0 for integer x

  For x = 3:
  Mod(3**2, 3) = Mod(9, 3) = 0
  PASS: Mod(9, 3) correctly simplified to 0

  ============================================================
  ALL TESTS PASSED!
  ============================================================
  Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

    Traceback (most recent call last):
      File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
        exec(line)
      File "<string>", line 1, in <module>
      File "<frozen importlib._bootstrap>", line 553, in module_from_spec
    AttributeError: 'NoneType' object has no attribute 'loader'

  Remainder of file ignored
  ./swebench_9_15/testbed/sympy/cor
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- sympy/core/mod.py
  Tool: Edit action #10
  old_text_sha256: e545275bdaa1da4b17451988f7f31aae2e8c422bdff17cbe0bc9410e4b8aef1a
  new_text_sha256: 281a030d50f8f72d74090c6ddaf952a12a92bd45b268f90cd28cdc35cc5ef22b

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
